array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var compteur:Int = 0
  for (i <- 1 to (num.lenght-1) {
   if (num(i) > num(i-1)) {
     compteur += 1
   }
  }
  return compteur
}